--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
