--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.45.1",
     "@tiptap/extension-character-count": "^2.6.4",
     "@tiptap/extension-image": "^2.6.4",
+    "@tiptap/extension-youtube": "^2.6.4",
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
