--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.12.7",
     "replicate": "^0.32.0",
+    "simple-icons": "^13.6.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
