--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.48",
     "@hookform/resolvers": "^3.9.0",
+    "@instantdb/react": "^0.12.6",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -23,6 +24,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.45.1",
     "@tiptap/extension-character-count": "^2.6.4",
     "@tiptap/extension-image": "^2.6.4",
