--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@instantdb/react": "^0.12.6",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -37,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "jotai": "^2.9.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "react": "^18",
