--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.48",
     "@hookform/resolvers": "^3.9.0",
-    "@instantdb/react": "^0.12.6",
+    "@instantdb/react": "^0.12.8",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -27,14 +27,15 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
-    "@supabase/supabase-js": "^2.45.1",
-    "@tiptap/extension-character-count": "^2.6.4",
-    "@tiptap/extension-image": "^2.6.4",
-    "@tiptap/extension-youtube": "^2.6.4",
-    "@tiptap/pm": "^2.6.4",
-    "@tiptap/react": "^2.6.4",
-    "@tiptap/starter-kit": "^2.6.4",
-    "ai": "^3.3.9",
+    "@supabase/supabase-js": "^2.45.2",
+    "@tiptap/extension-character-count": "^2.6.6",
+    "@tiptap/extension-image": "^2.6.6",
+    "@tiptap/extension-link": "^2.6.6",
+    "@tiptap/extension-youtube": "^2.6.6",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
+    "ai": "^3.3.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,27 +43,27 @@
     "jotai": "^2.9.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.12.7",
     "replicate": "^0.32.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.5.4",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5"
   }
 }
