--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.0",
     "jotai": "^2.9.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.12.7",
