--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "downshift": "^9.0.8",
     "embla-carousel-react": "^8.2.0",
     "jotai": "^2.9.3",
     "lucide-react": "^0.416.0",
