--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-markdown": "^0.8.10",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
