--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.6.0",
     "downshift": "^9.0.8",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.3.31",
     "jotai": "^2.9.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
