--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.12.7",
     "replicate": "^0.32.0",
