--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.45.2",
     "@tiptap/extension-character-count": "^2.6.6",
+    "@tiptap/extension-focus": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-link": "^2.6.6",
+    "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/extension-youtube": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
