--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-fontpicker-ts-lite": "^1.0.0",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
     "react-zoom-pan-pinch": "^3.6.1",
